# api-entry

./: .gitignore  Cargo.toml  README.md  config.toml  example.config.toml  log4rs.yaml  rate.sh
migrations/: 0002_initial.sql  001_create_user_table.sql  20240911144657_recreate_tables.sql
src/: config.rs  error.rs  lib.rs  main.rs  statistics.rs  test_utils.rs
src/auth/: mod.rs
src/db/: mod.rs
src/logger/: mod.rs
src/middleware/: rate_limiter.rs
src/routes/: health.rs  mod.rs  rate_test.rs  statistics.rs  user.rs
tests/api/: common.rs  health_check.rs  mod.rs  rate_limit.rs  statistics.rs  user.rs
