[package]
name = "my_actix_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
thiserror = "1.0"
backtrace = "0.3"
governor = { version = "0.5", features = ["dashmap"] }
nonzero_ext = "0.3"
futures = "0.3"
log4rs = "1.3"
tokio-postgres = "0.7"
deadpool-postgres = "0.10"
bcrypt = "0.13"
jsonwebtoken = "8.1"